
=== (next) ===
CHANGED: updated to the latest Hunter

=== 1.0.0 (2018-09-17) ===
NEW: initial release