@@ -26,8 +26,8 @@ project(futoin_asyncevent
 
 # Options
 #-----
-option(FUTOIN_WITH_TESTS "Build with tests" ON)
-option(FUTOIN_WITH_DOCS "Build documentation" ON)
+option(FUTOIN_WITH_TESTS "Build with tests" OFF)
+option(FUTOIN_WITH_DOCS "Build documentation" OFF)
 
 # Deps
 #-----
@@ -93,7 +93,7 @@ if (FUTOIN_WITH_TESTS)
     target_link_libraries(${PROJECT_TEST_NAME}
         PRIVATE ${PROJECT_NAME} Boost::unit_test_framework)
 
-    add_test(RIAsyncEvent ${PROJECT_TEST_NAME})
+    add_test(${PROJECT_NAME} ${PROJECT_TEST_NAME})
 endif()
 
 #--------------------------------------
