@@ -1,6 +1,7 @@
 
 === (next) ===
 CHANGED: updated to the latest Hunter
+CHANGED: to disable tests & docs by default
 
 === 1.0.0 (2018-09-17) ===
 NEW: initial release
